src/objects/FC_Charge_Monthly_Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>$Setup.FC_Charge_Monthly_Revenue_Settings__c.Active_Import_Process_ID__c == Import_Process_ID__c</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Number__c</fullName>
        <label>Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Import_Process_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import Process ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Charge__c</fullName>
        <label>Rate Plan Charge</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>(FC) Charge Monthly Revenues</relationshipLabel>
        <relationshipName>FC_Charge_Monthly_Revenues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sum_of_Monthly_Revenue_Shares__c</fullName>
        <label>Sum of Monthly Revenue Shares</label>
        <summarizedField>FC_Charge_Monthly_Revenue_Share__c.Allocated_Amount__c</summarizedField>
        <summaryForeignKey>FC_Charge_Monthly_Revenue_Share__c.Charge_Monthly_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>(FC) Charge Monthly Revenue</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>(FC) Charge Monthly Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(FC) Charge Monthly Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>